--- a/index.html
+++ b/index.html
@@ -24,52 +24,30 @@
     <!-- Main Header -->
     <header class="main-header glass animate-fade-in">
         <div class="container header-content">
-            <div class="brand">
-                <span class="gold-text" data-hydrate="restaurantName">M I L S A N O</span>
+            <div class="header-top-row">
+                <div class="logo-container">
+                    <img src="logo/logo-milsano.png" alt="Milsano Logo" class="restaurant-logo">
+                </div>
+                <div class="header-actions">
+                    <div class="lang-switcher">
+                        <button class="lang-btn" data-lang="de">DE</button>
+                        <button class="lang-btn" data-lang="en">EN</button>
+                    </div>
+                </div>
             </div>
-            <!-- Desktop Nav -->
-            <nav class="category-nav desktop-only">
-                <ul id="category-list">
+
+            <!-- Category Ribbon (Horizontal Scroll) -->
+            <nav class="category-nav ribbon-nav">
+                <ul id="category-list" class="ribbon-list">
                     <!-- Categories will be injected here -->
                 </ul>
             </nav>
-            <!-- Mobile Menu Toggle -->
-            <div class="header-right mobile-only">
-                <div class="lang-switcher">
-                    <button class="lang-btn" data-lang="de">DE</button>
-                    <button class="lang-btn" data-lang="en">EN</button>
-                </div>
-                <button id="mobile-menu-toggle" aria-label="Menu öffnen">
-                    <div class="hamburger">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </button>
-            </div>
-            <!-- Desktop Language Switcher -->
-            <div class="desktop-only header-right-desktop">
-                <div class="lang-switcher">
-                    <button class="lang-btn" data-lang="de">DE</button>
-                    <button class="lang-btn" data-lang="en">EN</button>
-                </div>
-            </div>
         </div>
     </header>
 
-    <!-- Mobile Navigation Overlay -->
-    <div id="mobile-menu-overlay" class="mobile-only glass">
-        <button id="close-mobile-menu" aria-label="Menu schließen">✕</button>
-        <div class="mobile-nav-content">
-            <div class="mobile-brand">
-                <span class="gold-text" data-hydrate="restaurantName">M I L S A N O</span>
-            </div>
-            <ul id="mobile-category-list">
-                <!-- Mobile Categories will be injected here -->
-            </ul>
-        </div>
-    </div>
 
     <main>
+
         <!-- Hero Section -->
         <section class="hero animate-fade-in">
             <div class="hero-overlay"></div>
