--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
 
-    <!-- Badges (Desktop) -->
-    <div class="badge badge-opening desktop-only">
+    <!-- Badges -->
+    <div class="badge badge-opening">
         <p>Di - Sa</p>
         <p>18:00 - 21:30</p>
     </div>
