--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div class="header-top-row">
                 <div class="logo-container">
                     <img src="logo/logo-milsano.png" alt="Milsano Logo" class="restaurant-logo">
+                    <div class="menu-switcher">
+                        <a href="index.html" class="menu-link active">MITTAG</a>
+                        <a href="abend.html" class="menu-link">ABEND</a>
+                    </div>
                 </div>
                 <div class="header-actions">
                     <div class="lang-switcher">
