--- a/abend.html
+++ b/abend.html
@@ -28,8 +28,8 @@
                 <div class="logo-container">
                     <img src="logo/logo-milsano.png" alt="Milsano Logo" class="restaurant-logo">
                     <div class="menu-switcher">
-                        <a href="index.html" class="menu-link">MITTAG</a>
-                        <a href="abend.html" class="menu-link active">ABEND</a>
+                        <a href="index.html" class="menu-link active">MITTAG</a>
+                        <a href="abend.html" class="menu-link">ABEND</a>
                     </div>
                 </div>
                 <div class="header-actions">
