--- a/admin/index.html
+++ b/admin/index.html
@@ -43,6 +43,10 @@
         <main class="admin-container dashboard-main">
             <section class="admin-controls">
                 <h2>Menü Verwaltung</h2>
+                <div class="menu-type-tabs">
+                    <button class="tab-btn active" data-type="lunch">Mittagsmenü</button>
+                    <button class="tab-btn" data-type="evening">Abendkarte</button>
+                </div>
                 <button id="add-category-btn" class="btn btn-secondary">+ Neue Kategorie</button>
             </section>
 
