--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@
                     <span class="line"></span>
                 </div>
             </div>
-        </section>
+            <!-- Menu Switcher -->
+            <div class="menu-switcher-container animate-fade-in">
+                <div class="menu-switcher">
+                    <button class="switcher-btn active" data-menu="lunch">Mittagsmenü</button>
+                    <button class="switcher-btn" data-menu="evening">Abendkarte</button>
+                </div>
+            </div>
 
-        <!-- Menu App -->
-        <div id="menu-app" class="container section-padding">
-            <!-- Dynamic Content -->
-        </div>
+            <!-- Menu App -->
+            <div id="menu-app" class="container section-padding">
+                <!-- Dynamic Content -->
+            </div>
     </main>
 
     <footer class="glass">
