--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- Badges -->
     <div class="badge badge-opening">
-        <p>Di - Sa</p>
-        <p>18:00 - 21:30</p>
+        <p>Di - Fr</p>
+        <p>11:45 - 13:45</p>
     </div>
 
     <!-- Main Header -->
@@ -60,18 +60,12 @@
                     <span class="line"></span>
                 </div>
             </div>
-            <!-- Menu Switcher -->
-            <div class="menu-switcher-container animate-fade-in">
-                <div class="menu-switcher">
-                    <button class="switcher-btn active" data-menu="lunch">Mittagsmenü</button>
-                    <button class="switcher-btn" data-menu="evening">Abendkarte</button>
-                </div>
-            </div>
+        </section>
 
-            <!-- Menu App -->
-            <div id="menu-app" class="container section-padding">
-                <!-- Dynamic Content -->
-            </div>
+        <!-- Menu App -->
+        <div id="menu-app" class="container section-padding">
+            <!-- Dynamic Content -->
+        </div>
     </main>
 
     <footer class="glass">
