--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body data-menu-type="mittag">
 
     <!-- Badges -->
     <div class="badge badge-opening">
@@ -29,6 +29,10 @@
                     <img src="logo/logo-milsano.png" alt="Milsano Logo" class="restaurant-logo">
                 </div>
                 <div class="header-actions">
+                    <div class="menu-switcher">
+                        <a href="index.html" class="menu-type-btn active">MITTAG</a>
+                        <a href="abend.html" class="menu-type-btn">ABEND</a>
+                    </div>
                     <div class="lang-switcher">
                         <button class="lang-btn" data-lang="de">DE</button>
                         <button class="lang-btn" data-lang="en">EN</button>
