--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-hydrate="restaurantName">M I L S A N O</title>
+    <title>MILSANO | MITTAGS MENÜ</title>
     <meta name="description" content="" data-hydrate="metaDescription">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,8 +80,8 @@
     <section class="hero animate-fade-in">
         <div class="hero-overlay"></div>
         <div class="container hero-content">
-            <h1 class="hero-title" data-hydrate="restaurantName">M I L S A N O</h1>
-            <p class="hero-subtitle" data-hydrate="tagline">Genuss im Herzen von Mils</p>
+            <h1 class="hero-title">MITTAGS MENÜ</h1>
+            <p class="hero-subtitle">Restaurant Milsano</p>
             <div class="hero-decoration">
                 <span class="line"></span>
                 <span class="icon">✧</span>
